Added new option to enable/disable the version warning message.

--- a/src/main/resources/lang/I18n_it_IT.properties
+++ b/src/main/resources/lang/I18n_it_IT.properties
@@ -50,6 +50,7 @@ settings.language.hint=Esso entra in vigore dopo la nuova entrata in funzione.
 settings.mc_version=Minecraft version
 settings.mc_version.1=1.9 - 1.18
 settings.mc_version.2=1.19+
+settings.check_vers=Mostra la notifica di rilevamento della versione
 settings.basic=Base
 settings.advanced=Avanzato
 calibrator.you_moved=Ignorando ultimo lancio perché ti sei mosso.
