--- a/src/main/resources/lang/I18n_ja_Ryukyuan.properties
+++ b/src/main/resources/lang/I18n_ja_Ryukyuan.properties
@@ -50,6 +50,7 @@ settings.language.hint=言語ぬ変更ー、アプリケーションぬ再起動
 settings.mc_version=マインクラフトぬバージョン
 settings.mc_version.1=1.9 - 1.18
 settings.mc_version.2=1.19+
+settings.check_vers=
 settings.basic=ベーシック
 settings.advanced=高度
 calibrator.you_moved=移動さるたみ、最後ぬスロー無視さびーん。
