--- a/src/main/resources/lang/I18n_ko_KR.properties
+++ b/src/main/resources/lang/I18n_ko_KR.properties
@@ -71,6 +71,7 @@ settings.language.hint=변경 시 재실행해야 적용됩니다.
 settings.mc_version=Minecraft 버전
 settings.mc_version.1=1.9 - 1.18
 settings.mc_version.2=1.19+
+settings.check_vers=버전 감지 알림 표시
 settings.basic=기본
 settings.advanced=고급
 settings.general=일반
