--- a/src/main/resources/lang/I18n_pt_BR.properties
+++ b/src/main/resources/lang/I18n_pt_BR.properties
@@ -50,6 +50,7 @@ settings.language.hint=A alteração do idioma terá efeito após a reinicializa
 settings.mc_version=Versão do Minecraft
 settings.mc_version.1=1.9 - 1.18
 settings.mc_version.2=1.19+
+settings.check_vers=Mostrar notificação de detecção de versão
 settings.basic=Basico
 settings.advanced=Advançado
 settings.themeeditor.hex_colon=Hex:
