--- a/src/main/resources/lang/I18n_ru_RU.properties
+++ b/src/main/resources/lang/I18n_ru_RU.properties
@@ -71,6 +71,7 @@ settings.language.hint=Изменение языка произойдёт пос
 settings.mc_version=Версия Майнкрафта
 settings.mc_version.1=1.9 - 1.18
 settings.mc_version.2=1.19+
+settings.check_vers=Показать уведомление об обнаружении версии
 settings.basic=Стандартные
 settings.advanced=Расширенные
 settings.general=Общие
