--- a/src/main/resources/lang/I18n_zh_CN.properties
+++ b/src/main/resources/lang/I18n_zh_CN.properties
@@ -71,6 +71,7 @@ settings.language.hint=重新运行后生效
 settings.mc_version=Minecraft 版本
 settings.mc_version.1=1.9 - 1.18
 settings.mc_version.2=1.19+
+settings.check_vers=显示版本检测警告
 settings.basic=基本
 settings.advanced=高级
 settings.general=常规
