--- a/src/main/resources/lang/I18n.properties
+++ b/src/main/resources/lang/I18n.properties
@@ -71,6 +71,7 @@ settings.language.hint=Changing language will take effect after the application 
 settings.mc_version=Minecraft version
 settings.mc_version.1=1.9 - 1.18
 settings.mc_version.2=1.19+
+settings.check_vers=Display version detection warning
 settings.basic=Basic
 settings.advanced=Advanced
 settings.general=General
