--- a/src/main/resources/lang/I18n_cs_CZ.properties
+++ b/src/main/resources/lang/I18n_cs_CZ.properties
@@ -71,6 +71,7 @@ settings.language.hint=Jazyk bude změněn až po restartování aplikace.
 settings.mc_version=Verze Minecraftu
 settings.mc_version.1=1.9 - 1.18
 settings.mc_version.2=1.19+
+settings.check_vers=Zobrazit upozornění na zjištění verze
 settings.basic=Základní
 settings.advanced=Pokročilé
 settings.general=Obecné
