--- a/src/main/resources/lang/I18n_es_ES.properties
+++ b/src/main/resources/lang/I18n_es_ES.properties
@@ -62,6 +62,7 @@ settings.language.hint=El cambio de idioma entrará en vigor después de reinici
 settings.mc_version=Versión de Minecraft
 settings.mc_version.1=1.9 - 1.18
 settings.mc_version.2=1.19+
+settings.check_vers=Mostrar notificación de detección de versión
 settings.basic=Básico
 settings.advanced=Avanzado
 settings.general=General
