--- a/src/main/resources/lang/I18n_fr_FR.properties
+++ b/src/main/resources/lang/I18n_fr_FR.properties
@@ -71,6 +71,7 @@ settings.language.hint=Changer la langue nécessite de redémarrer l'application
 settings.mc_version=Version de Minecraft
 settings.mc_version.1=1.9 - 1.18
 settings.mc_version.2=1.19+
+settings.check_vers=Afficher la notification de détection de version
 settings.basic=Basique
 settings.advanced=Avancée
 settings.general=Général
