--- a/src/main/resources/lang/I18n_ja_JP.properties
+++ b/src/main/resources/lang/I18n_ja_JP.properties
@@ -50,6 +50,7 @@ settings.language.hint=言語の変更は、アプリケーションの再起動
 settings.mc_version=マインクラフトのバージョン
 settings.mc_version.1=1.9 - 1.18
 settings.mc_version.2=1.19+
+settings.check_vers=バージョン検出通知を表示する
 settings.basic=ベーシック
 settings.advanced=高度
 calibrator.you_moved=移動したため、最後のスローを無視します。
