--- a/src/main/resources/lang/I18n_tr_TR.properties
+++ b/src/main/resources/lang/I18n_tr_TR.properties
@@ -71,6 +71,7 @@ settings.language.hint=Dil değişikliği uygulama yeniden başlatıldıktan son
 settings.mc_version=Minecraft sürümü
 settings.mc_version.1=1.9 - 1.18
 settings.mc_version.2=1.19+
+settings.check_vers=Sürüm algılama bildirimini göster
 settings.basic=Temel
 settings.advanced=Gelişmiş
 settings.general=Genel
